# SSH-Monitor

./: .gitignore  CMakeLists.txt  Config.cpp  Monitor.cpp  README.md  Webhook.cpp  Whitelist.cpp  config.json  install.sh  main.cpp  sshmonitor
Includes/: Config.h  Monitor.h  Webhook.h  Whitelist.h  main.h
